--- a/src/Carousel/ListItem.css
+++ b/src/Carousel/ListItem.css
@@ -27,17 +27,12 @@
 
 .list-location {
   font-size: 1.4rem;
-  font-weight: 700;
+  font-weight: bold;
   color: #000;
-  margin-bottom: 0.8rem;
-  line-height: 1.58;
   overflow: hidden;
+  width: 100%;
   text-overflow: ellipsis;
-  word-wrap: break-word;
-  display: -webkit-box;
-  -webkit-line-clamp: 3;
-  -webkit-box-orient: vertical;
-  max-height: 6.6rem;
+  white-space: nowrap;
 }
 
 .list-seat {
@@ -52,6 +47,7 @@
 .list-price {
   overflow: hidden;
   width: 100%;
+  color: #000;
   text-overflow: ellipsis;
   white-space: nowrap;
 }
