feat: 접근성 기능 추가

--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -1,7 +1,12 @@
 .layout {
+  display: block;
   position: relative;
   width: 240px;
   height: 370px;
+}
+
+.layout:link {
+  color: inherit;
 }
 
 .description {
