feat: slider끝까지 갔을때 버튼 disabled 으로 상태 변경

--- a/src/style/carousel.scss
+++ b/src/style/carousel.scss
@@ -38,6 +38,10 @@ $carouselItemWidth: calc($containerWidth/2);
   .carousel-control.left,
   .carousel-control.right {
     opacity: 1;
+
+    &.disabled {
+      cursor: not-allowed;
+    }
   }
   .carousel-control.left {
     left: 0;
