--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -24,7 +24,8 @@ input[type='number'] {
   display: none;
 }
 
-.hidden-for-aria-live {
+.hidden-for-aria-live,
+.sr-only {
   position: absolute;
   text-indent: -9999px;
 }
