--- a/src/components/ItemCard/ItemCard.module.css
+++ b/src/components/ItemCard/ItemCard.module.css
@@ -1,6 +1,51 @@
 .layout {
+  position: relative;
   display: flex;
   flex-direction: column;
   width: 100%;
   height: auto;
+}
+
+.link {
+  text-decoration: none;
+  color: inherit;
+  backdrop-filter: sepia(100%);
+}
+
+.image {
+  width: 100%;
+  height: auto;
+}
+
+.description {
+  position: absolute;
+  left: 0;
+  top: 0;
+  display: flex;
+  flex-direction: column;
+  overflow: hidden;
+  padding: 1.6rem 1.8rem;
+}
+
+.route {
+  font-size: 1.4rem;
+  font-weight: 700;
+  margin-bottom: 0.8rem;
+  line-height: 1.58;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  word-wrap: break-word;
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  max-height: 6.6rem;
+}
+
+.seat {
+  font-size: 1.2rem;
+}
+.trip-type {
+  font-size: 1.4rem;
+  font-weight: 700;
+  color: #11277b;
 }
