refactor: 스타일 일부 수정

--- a/src/style/style.css
+++ b/src/style/style.css
@@ -165,6 +165,7 @@ ul {
 }
 
 .sr-only {
-  display: hidden;
-  text-indent: -9999px;
+  position: absolute !important;
+  display: hidden !important;
+  text-indent: -9999px !important;
 }
