--- a/src/components/Carousel/Carousel.module.css
+++ b/src/components/Carousel/Carousel.module.css
@@ -1,9 +1,10 @@
 .layout {
   position: relative;
-  max-width: 1100px;
+  width: calc(15rem * 2 + 3rem);
 }
 
 .list {
+  width: 100%;
   margin: 0;
   padding: 0;
   list-style: none;
@@ -22,15 +23,7 @@
 
 .list > li {
   list-style-type: none;
-  width: calc((100% - 0.8rem) / 2);
-}
-
-@media (min-width: 1060px) {
-  .list > li {
-    width: calc((100% - 12rem) / 5);
-    min-width: 232px;
-    max-width: 232px;
-  }
+  min-width: 15rem;
 }
 
 .button {
