--- a/src/pages/Carousel/styles.module.css
+++ b/src/pages/Carousel/styles.module.css
@@ -26,6 +26,7 @@
   top: 50%;
   left: 0;
   transform: translateY(-50%);
+  cursor: pointer;
   z-index: 1;
 }
 
@@ -33,5 +34,6 @@
   position: absolute;
   top: 50%;
   right: 0;
+  cursor: pointer;
   transform: translateY(-50%);
 }
