--- a/src/index.css
+++ b/src/index.css
@@ -16,7 +16,8 @@ button {
   cursor: pointer;
 }
 
-button:disabled {
+button:disabled,
+button[aria-disabled="true"] {
   cursor: not-allowed;
 }
 
