--- a/carousel.css
+++ b/carousel.css
@@ -110,6 +110,7 @@ img {
     align-items: flex-start;
     margin-top: 50px;
     position: relative;
+    overflow-x: hidden;
   }
 
   .slider-container {
