fix : 일부 환경에서 스크롤 이동 시 포커스 처리가 되지 않던 문제 해결

--- a/src/components/Carousel/styles.module.scss
+++ b/src/components/Carousel/styles.module.scss
@@ -11,7 +11,7 @@
     overflow-x: scroll;
     overflow-y: visible;
     overscroll-behavior-x: contain;
-    scroll-snap-type: none;
+    scroll-snap-type: x mandatory;
     scroll-behavior: smooth;
 
     & > * {
