feat: 앵커 엘리먼트가 실제 크기에 맞도록 설정

--- a/src/css/carousel.css
+++ b/src/css/carousel.css
@@ -24,6 +24,11 @@ ul {
   gap: 40px;
 }
 
+.carousel-anchor {
+  display: block;
+  height: 100%;
+}
+
 .carousel-image {
   width: 230px;
   height: 295px;
