--- a/src/css/carousel.css
+++ b/src/css/carousel.css
@@ -66,13 +66,9 @@ a {
   font-size: 18px;
 }
 
-.button-wrapper {
-  position: absolute;
-  top: 130px;
-  width: 500px;
-}
-
 .button {
+  position: absolute;
+  top: 45%;
   width: 30px;
   height: 60px;
   border: none;
@@ -80,7 +76,6 @@ a {
 }
 
 .prev-button {
-  position: absolute;
   left: 0;
   background: url("https://www.koreanair.com/etc.clientlibs/koreanair/clientlibs/clientlib-base/resources/images/mris__button-left.svg")
     no-repeat center top;
@@ -88,7 +83,6 @@ a {
 }
 
 .next-button {
-  position: absolute;
   right: 0;
   background: url("https://www.koreanair.com/etc.clientlibs/koreanair/clientlibs/clientlib-base/resources/images/mris__button-right.svg")
     no-repeat right top;
@@ -116,9 +110,5 @@ a {
   .item-image {
     width: 175px;
     height: 240px;
-  }
-
-  .button-wrapper {
-    width: 370px;
   }
 }
