--- a/src/css/carousel.css
+++ b/src/css/carousel.css
@@ -98,8 +98,9 @@ a {
   clip-path: polygon(0 0, 0 0, 0 0);
 }
 
-@media (max-width: 390px) {
+@media (max-width: 370px) {
   .item-container {
+    position: static;
     width: 370px;
   }
 
@@ -110,5 +111,10 @@ a {
   .item-image {
     width: 175px;
     height: 240px;
+  }
+
+  body {
+    position: relative;
+    overflow-x: hidden;
   }
 }
