--- a/src/pages/CarouselPage/components/CarouselController/style.css
+++ b/src/pages/CarouselPage/components/CarouselController/style.css
@@ -6,6 +6,8 @@
   width: 100%;
   left: 0;
   bottom: 160px;
+
+  pointer-events: none;
 }
 
 .left__btn {
@@ -16,7 +18,9 @@
   height: 60px;
 
   border: 0;
+
   cursor: pointer;
+  pointer-events: auto;
 }
 
 .left__btn:disabled {
@@ -35,5 +39,7 @@
   height: 60px;
 
   border: 0;
+
   cursor: pointer;
+  pointer-events: auto;
 }
