refactor: 전역 스타일 설정

--- a/src/components/PromotionCard/PromotionCard.css
+++ b/src/components/PromotionCard/PromotionCard.css
@@ -4,7 +4,7 @@
 }
 
 .promotion-card {
-  width: 57rem;
+  width: var(--promotion-card-width);
   height: 75rem;
   padding: 6rem;
   border: 1px solid white;
