--- a/src/style/normalize.css
+++ b/src/style/normalize.css
@@ -8,6 +8,10 @@
    * 2. Prevent adjustments of font size after orientation changes in iOS.
    */
 
+* {
+  box-sizing: border-box;
+}
+
 html {
   line-height: 1.15; /* 1 */
   -webkit-text-size-adjust: 100%; /* 2 */
@@ -348,4 +352,13 @@ template {
 
 [hidden] {
   display: none;
+}
+
+p {
+  margin: 0;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
 }
