[항공사 웹사이트의 컴포넌트 접근성 높이기 - 2단계] 병민(윤병인) 미션 제출합니다. (#94)
* feat: 기본적인 carousel 구현

* feat: 타이틀 추가

* feat: crousel 개선

* feat: slider끝까지 갔을때 버튼 disabled 으로 상태 변경

* fix: 제목 변경

* feat: 반응형 지원

* fix: alt와 text를 두번 읽는 문제 해결

* refactor: console 제거

* fix: Button 위치 변경

* fix: button selector 변경

* fix: button의 위치를 변경한다

* feat: 버튼을 밖에 둔다

* fix: 모바일에서 버튼이 가려지는 문제 해결

* feat: 버튼 label 변경

* feat: 목록 개수도 읽어준다

* test

* refactor: h2 -> p로 변경

* fix: 글자가 두번 읽히는 오류 해결

* fix: carousel 스타일 수정

* feat: carousel 개수가 변했을때 안내 메세지도 동적으로 변경한다

* fix: 이전/다음 항목 버튼의 위치를 조정한다

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,6 +1,8 @@
 @import './normalize.scss';
 @import './snackbar.scss';
 @import './helptip.scss';
+@import './tabs.scss';
+@import './carousel.scss';
 
 * {
   box-sizing: border-box;
@@ -22,7 +24,8 @@ input[type='number'] {
   display: none;
 }
 
-.hidden-for-aria-live {
+.hidden-for-aria-live,
+.sr-only {
   position: absolute;
   text-indent: -9999px;
 }
@@ -52,4 +55,11 @@ input[type='number'] {
   padding-left: 10px;
   padding-right: 10px;
   text-align: center;
+}
+
+ul,
+li {
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
