feat(reset.css): body 가운데 정렬 미디어쿼리일때만 작동

--- a/public/reset.css
+++ b/public/reset.css
@@ -134,9 +134,12 @@ table {
   border-spacing : 0;
 }
 
-body {
-  max-width: 600px;
-  position : absolute;
-  left     : 50%;
-  transform: translateX(-50%);
+@media screen and (min-width:600px) {
+  body {
+
+    max-width: 600px;
+    position : absolute;
+    left     : 50%;
+    transform: translateX(-50%);
+  }
 }
