--- a/public/reset.css
+++ b/public/reset.css
@@ -143,3 +143,8 @@ table {
     transform: translateX(-50%);
   }
 }
+
+@font-face {
+  font-family: 'Pretendard';
+  src        : url('https://fastly.jsdelivr.net/gh/Project-Noonnu/noonfonts_2107@1.1/Pretendard-Regular.woff') format('woff');
+}
