--- a/src/components/TravelSection.module.css
+++ b/src/components/TravelSection.module.css
@@ -17,6 +17,7 @@
   display: none;
   width: 100%;
   height: 246px;
+  padding: 0px;
 }
 
 .cardActive {
@@ -39,6 +40,7 @@
   bottom: 0;
   background: linear-gradient(180deg, rgba(255, 255, 255, 0.9) 26%, rgba(255, 255, 255, 0) 100%);
   padding: 24px 16px;
+  text-align: left;
 }
 
 .cardTitle {
@@ -73,13 +75,13 @@
 .navButtonPrev {
   left: 0;
   border-radius: 0 40px 40px 0;
-  padding-left: 15px;
+  padding-right: 10px;
 }
 
 .navButtonNext {
   right: 0;
   border-radius: 40px 0 0 40px;
-  padding-right: 15px;
+  padding-left: 10px;
 }
 
 .navButtonIcon {
