--- a/src/components/FlightBooking.module.css
+++ b/src/components/FlightBooking.module.css
@@ -12,8 +12,10 @@
 
 .helpIconWrapper {
   position: relative;
-  margin-left: 5px;
   cursor: pointer;
+  border: none;
+  margin-left: 5px;
+  background-color: transparent;
 }
 
 .helpIcon {
