--- a/src/components/TravelSection.module.css
+++ b/src/components/TravelSection.module.css
@@ -86,3 +86,14 @@
   width: 24px;
   height: 24px;
 }
+
+.visuallyHidden {
+  position: absolute;
+  width: fit-content;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip-path: inset(50%);
+  border: 0;
+}
