--- a/src/components/TravelSection.module.css
+++ b/src/components/TravelSection.module.css
@@ -17,6 +17,7 @@
   display: none;
   width: 100%;
   height: 246px;
+  text-align: left;
 }
 
 .cardActive {
@@ -85,4 +86,21 @@
 .navButtonIcon {
   width: 24px;
   height: 24px;
+}
+
+.navButton.disabled {
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
+.srOnly {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
 }
