--- a/src/components/FlightBooking.module.css
+++ b/src/components/FlightBooking.module.css
@@ -1,4 +1,9 @@
 .flightBooking {
+  background-image: url('./assets/booking-bg.png');
+  padding: 26px 24px;
+}
+
+.form {
   background-color: white;
   border-radius: 8px;
   padding: 20px;
