--- a/src/components/travelSection/TravelSection.module.css
+++ b/src/components/travelSection/TravelSection.module.css
@@ -10,13 +10,14 @@
 }
 
 .card {
-  position: relative;
-  border-radius: 4px;
-  border: 1px solid rgba(217, 217, 217, 0.5);
-  overflow: hidden;
   display: none;
   width: 100%;
   height: 246px;
+  position: relative;
+  padding: 0;
+  border-radius: 4px;
+  border: 1px solid rgba(217, 217, 217, 0.5);
+  overflow: hidden;
 }
 
 .cardActive {
@@ -32,6 +33,9 @@
 }
 
 .cardContent {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
   position: absolute;
   top: 0;
   left: 0;
