--- a/src/components/TravelSection.module.css
+++ b/src/components/TravelSection.module.css
@@ -9,6 +9,17 @@
   padding: 0 24px;
 }
 
+button {
+  background: none;
+  border: none;
+  padding: 0;
+  margin: 0;
+  font: inherit;
+  color: inherit;
+  cursor: pointer;
+  outline: none;
+}
+
 .card {
   position: relative;
   border-radius: 4px;
@@ -21,6 +32,7 @@
 
 .cardActive {
   display: block;
+  text-align: left;
 }
 
 .cardImage {
