여행 캐러셀 보이스오버에서 쉽게 들을 수 있도록 추가

--- a/src/components/TravelSection.module.css
+++ b/src/components/TravelSection.module.css
@@ -3,6 +3,14 @@
   padding-bottom: 32px;
 }
 
+.travelDescription {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  white-space: nowrap;
+}
+
 .carousel {
   position: relative;
   overflow: hidden;
