--- a/src/components/TravelSection.module.css
+++ b/src/components/TravelSection.module.css
@@ -3,6 +3,11 @@
   padding-bottom: 32px;
 }
 
+.travelTitle {
+  font-size: 18px;
+  padding: 24px;
+}
+
 .carousel {
   position: relative;
   overflow: hidden;
