--- a/src/App.module.css
+++ b/src/App.module.css
@@ -40,3 +40,17 @@
   background-color: white;
   text-align: center;
 }
+
+.showOnFocus {
+  position: absolute;
+  top: -40px;
+  left: 0;
+  background: #000;
+  color: #fff;
+  padding: 8px 16px;
+  z-index: 100;
+
+  &:focus {
+    top: 0;
+  }
+}
