--- a/src/App.module.css
+++ b/src/App.module.css
@@ -40,3 +40,20 @@
   background-color: white;
   text-align: center;
 }
+
+.skipToMain {
+  position: absolute;
+  top: 0;
+  left: 0;
+  transform: translateX(-100%);
+  background-color: #333;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.skipToMain:focus {
+  transform: translateX(0);
+}
