refactor: 도움말 버튼 태그 button으로 변경

--- a/src/components/FlightBooking.module.css
+++ b/src/components/FlightBooking.module.css
@@ -15,10 +15,12 @@
   align-items: center;
 }
 
-.helpIconWrapper {
+.helpIconButton {
   position: relative;
   margin-left: 5px;
   cursor: pointer;
+  background-color: transparent;
+  border: none;
 }
 
 .helpIcon {
