refactor: 도움말 툴팁을 도움말 버튼 형제 요소로 배치

--- a/src/components/FlightBooking.module.css
+++ b/src/components/FlightBooking.module.css
@@ -14,9 +14,10 @@
   display: flex;
   align-items: center;
 }
-
-.helpIconButton {
+.helpContainer {
   position: relative;
+}
+.helpIconButton {
   margin-left: 5px;
   cursor: pointer;
   background-color: transparent;
