refactor: 승객 카운트 메세지 뷰에 보이도록 수정

--- a/src/components/FlightBooking.module.css
+++ b/src/components/FlightBooking.module.css
@@ -101,3 +101,10 @@
   border-radius: 4px;
   cursor: pointer;
 }
+.statusMessage {
+  margin: auto 0;
+  height: 18px;
+  text-align: center;
+  width: 100%;
+  font-size: 14px;
+}
