design: 카운트 메세지 text 정렬 변경

--- a/src/components/FlightBooking.module.css
+++ b/src/components/FlightBooking.module.css
@@ -104,7 +104,7 @@
 .statusMessage {
   margin: auto 0;
   height: 18px;
-  text-align: center;
+  text-align: right;
   width: 100%;
   font-size: 14px;
 }
