refactor: App, TravelSection 컴포넌트에 시멘틱 요소 적용

--- a/src/components/TravelSection.module.css
+++ b/src/components/TravelSection.module.css
@@ -3,6 +3,11 @@
   padding-bottom: 32px;
 }
 
+.travelSectionTitle {
+  font-size: 18px;
+  padding: 24px;
+}
+
 .carousel {
   position: relative;
   overflow: hidden;
