--- a/src/components/TravelSection.module.css
+++ b/src/components/TravelSection.module.css
@@ -22,6 +22,8 @@
   display: none;
   width: 100%;
   height: 246px;
+  cursor: pointer;
+  padding: 0;
 }
 
 .cardActive {
@@ -44,6 +46,7 @@
   bottom: 0;
   background: linear-gradient(180deg, rgba(255, 255, 255, 0.9) 26%, rgba(255, 255, 255, 0) 100%);
   padding: 24px 16px;
+  text-align: left;
 }
 
 .cardTitle {
