--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -1,53 +1,53 @@
 .mainNav {
   background-color: #f8f8f8;
-  padding: 10px 0;
+  padding         : 10px 0;
 }
 
 .navList {
   list-style-type: none;
-  padding: 10px 16px;
-  margin: 0;
+  padding        : 10px 16px;
+  margin         : 0;
 }
 
 .navItem {
-  display: inline-block;
-  position: relative;
+  display     : inline-block;
+  position    : relative;
   margin-right: 20px;
 }
 
 .navItem a {
   text-decoration: none;
-  color: #333;
-  font-size: 16px;
-  padding: 5px 10px;
-  display: block;
+  color          : #333;
+  font-size      : 16px;
+  padding        : 5px 10px;
+  display        : block;
 }
 
 .navItem a:hover,
 .navItem a:focus {
   background-color: #e0e0e0;
-  border-radius: 4px;
+  border-radius   : 4px;
 }
 
 .navItem .navList {
-  display: none;
-  position: absolute;
-  top: 100%;
-  left: 0;
+  display         : none;
+  position        : absolute;
+  top             : 100%;
+  left            : 0;
   background-color: #fff;
-  border: 1px solid #ddd;
-  border-radius: 4px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+  border          : 1px solid #ddd;
+  border-radius   : 4px;
+  box-shadow      : 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-.navItem:hover > .navList,
-.navItem:focus-within > .navList {
+.navItem:hover>.navList,
+.navItem:focus-within>.navList {
   display: block;
 }
 
 .navItem .navList .navItem {
-  width: 200px;
-  display: block;
+  width       : 200px;
+  display     : block;
   margin-right: 0;
 }
 
@@ -61,15 +61,33 @@
 }
 
 .navToggle {
-  display: none;
-  font-size: 16px;
-  padding: 10px;
+  display         : none;
+  font-size       : 16px;
+  padding         : 10px;
   background-color: #333;
-  color: white;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
+  color           : white;
+  border          : none;
+  border-radius   : 4px;
+  cursor          : pointer;
 }
+
+.skipNav {
+  position   : absolute;
+  top        : -30px;
+  left       : 0;
+  background : #000;
+  height     : 30px;
+  line-height: 30px;
+  color      : #fff;
+  font-size  : 12px;
+  padding    : 0 6px;
+}
+
+.skipNav:focus,
+.skipNav:active {
+  top: 0;
+}
+
 
 @media (max-width: 768px) {
   .navToggle {
@@ -85,22 +103,22 @@
   }
 
   .navItem {
-    display: block;
-    margin-right: 0;
+    display      : block;
+    margin-right : 0;
     margin-bottom: 10px;
   }
 
   .navItem .navList {
-    position: static;
-    display: none;
-    width: auto;
-    border: none;
-    box-shadow: none;
+    position   : static;
+    display    : none;
+    width      : auto;
+    border     : none;
+    box-shadow : none;
     margin-left: 20px;
   }
 
-  .navItem:hover > .navList,
-  .navItem:focus-within > .navList {
+  .navItem:hover>.navList,
+  .navItem:focus-within>.navList {
     display: block;
   }
 
