--- a/src/components/flightBooking/FlightBooking.module.css
+++ b/src/components/flightBooking/FlightBooking.module.css
@@ -14,6 +14,8 @@
   position: relative;
   margin-left: 5px;
   cursor: pointer;
+  border-style: none;
+  background-color: transparent;
 }
 
 .helpIcon {
