feat(App): App 내 skip link 적용

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -40,3 +40,18 @@
   background-color: white;
   text-align: center;
 }
+
+.skipLink {
+  position: absolute;
+  top: -40px;
+  left: 0;
+  background: #000000;
+  color: white;
+  padding: 8px;
+  z-index: 100;
+  transition: top 0.3s;
+}
+
+.skipLink:focus {
+  top: 0;
+}
