--- a/src/components/TravelSection.module.css
+++ b/src/components/TravelSection.module.css
@@ -87,3 +87,15 @@
   width: 24px;
   height: 24px;
 }
+
+.srOnly {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0); /* 구형 브라우저 호환성을 위한 clip */
+  border: 0;
+  white-space: nowrap; /* 텍스트 줄바꿈 방지 */
+}
