feat: 링크 이동 요소 button에서 a태그로 변경

--- a/src/components/TravelSection.module.css
+++ b/src/components/TravelSection.module.css
@@ -18,6 +18,12 @@
   width: 100%;
   height: 246px;
   text-align: left;
+  color: rgba(2, 2, 2);
+}
+
+.card:visited {
+  color: rgba(2, 2, 2);
+  text-decoration: none;
 }
 
 .cardActive {
