--- a/src/Accessibility.css
+++ b/src/Accessibility.css
@@ -9,3 +9,24 @@
   white-space: nowrap;
   border: 0;
 }
+
+#skip-nav {
+  position: relative;
+  z-index: 1000;
+}
+#skip-nav a {
+  position: absolute;
+  top: -30px;
+  left: 0;
+  width: 200px;
+  background: #333;
+  text-align: center;
+  padding: 2px 6px;
+  font-size: 13px;
+  line-height: 26px;
+  color: #fff;
+  white-space: nowrap;
+}
+#skip-nav a:focus {
+  top: 0;
+}
