feat: 본문으로 바로가기 링크 추가

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -40,3 +40,17 @@
   background-color: white;
   text-align: center;
 }
+
+.skipLink {
+  position: absolute;
+  top: -40px;
+  left: 0;
+  background-color: #000;
+  color: #fff;
+  padding: 8px 16px;
+  z-index: 1;
+}
+
+.skipLink:focus {
+  top: 0;
+}
