--- a/src/App.module.css
+++ b/src/App.module.css
@@ -40,3 +40,22 @@
   background-color: white;
   text-align: center;
 }
+
+.skipLink {
+  position: absolute;
+  top: 0;
+  left: 0;
+
+  padding: 12px;
+
+  background-color: #333;
+
+  color: #fff;
+  text-decoration: none;
+
+  transform: translateY(-40px);
+}
+
+.skipLink:focus {
+  transform: translateY(0);
+}
