--- a/src/components/FlightBooking.module.css
+++ b/src/components/FlightBooking.module.css
@@ -74,6 +74,13 @@
   align-items: center;
 }
 
+.counter button[aria-disabled='true'] {
+  background-color: #b0b0b0;
+  color: #3b3b3b;
+  cursor: not-allowed;
+  pointer-events: none;
+}
+
 .counter span {
   font-size: 18px;
   text-align: center;
