--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,4 +1,5 @@
 .app {
+  position: relative;
   font-family: Arial, sans-serif;
   max-width: 480px;
   width: 100%;
@@ -9,6 +10,29 @@
   margin: 0 auto;
 }
 
+.skipLink {
+  position: absolute;
+  top: -40px;
+  left: 0;
+  transition: top 0.4s ease-in-out;
+  text-decoration: none;
+  background-color: #333333;
+  color: #fff;
+  padding: 8px 16px;
+  z-index: 1;
+  border: none;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2); /* 기본 box-shadow 스타일 */
+}
+
+.skipLink:focus {
+  clip: auto;
+  top: 0;
+  height: 48px;
+  width: auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .header {
   padding: 48px 24px 24px 24px;
 }
