--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -40,8 +40,8 @@
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
 
-.navItem:hover > .navList,
-.navItem:focus-within > .navList {
+.navItem:hover>.navList,
+.navItem:focus-within>.navList {
   display: block;
 }
 
@@ -74,6 +74,7 @@
 @media (max-width: 768px) {
   .navToggle {
     display: block;
+    width: 100%;
   }
 
   .mainNav {
@@ -99,8 +100,8 @@
     margin-left: 20px;
   }
 
-  .navItem:hover > .navList,
-  .navItem:focus-within > .navList {
+  .navItem:hover>.navList,
+  .navItem:focus-within>.navList {
     display: block;
   }
 
