feat: 컴포넌트 접근성 높이기 미션 구현

--- a/src/components/FlightBooking.module.css
+++ b/src/components/FlightBooking.module.css
@@ -16,6 +16,13 @@
   cursor: pointer;
 }
 
+.helpIconButton {
+  background: none;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+}
+
 .helpIcon {
   width: 16px;
   height: 16px;
