refactor: SkipToContent의 동작에서 layout shift가 발생하지 않도록 수정

--- a/src/components/SkipToContent.module.css
+++ b/src/components/SkipToContent.module.css
@@ -1,16 +1,15 @@
 .skipLink {
-  display: block;
   position: absolute;
-  top: -100px;
+  top: 0;
   left: 0;
-  padding: 0;
+  padding: 18px 16px;
   background-color: #000;
   color: #fff;
   z-index: 100;
-  transition: top 0.3s, padding 0.3s;
+  transform: translateY(-100%);
+  transition: transform 0.3s;
 }
 
 .skipLink:focus {
-  top: 0;
-  padding: 18px 16px;
+  transform: translateY(0);
 }
