--- a/src/components/TravelSection.module.css
+++ b/src/components/TravelSection.module.css
@@ -40,6 +40,11 @@
   bottom: 0;
   background: linear-gradient(180deg, rgba(255, 255, 255, 0.9) 26%, rgba(255, 255, 255, 0) 100%);
   padding: 24px 16px;
+
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  align-items: flex-start;
 }
 
 .cardTitle {
