--- a/src/components/TravelSection.module.css
+++ b/src/components/TravelSection.module.css
@@ -7,6 +7,7 @@
   position: relative;
   overflow: hidden;
   padding: 0 24px;
+  list-style: none;
 }
 
 .card {
@@ -18,6 +19,14 @@
   width: 100%;
   height: 246px;
   padding: 0px;
+  color: black;
+  text-decoration: none;
+}
+
+.card:focus,
+.card:active {
+  color: black;
+  outline: none;
 }
 
 .cardActive {
