--- a/src/App.module.css
+++ b/src/App.module.css
@@ -12,8 +12,8 @@
 .skip {
   position: absolute;
   left: -10000px;
-  width: 1px;
-  height: 1px;
+  width: 0;
+  height: 0;
   overflow: hidden;
 }
 
