--- a/src/index.css
+++ b/src/index.css
@@ -117,3 +117,14 @@ body {
   font-family: Arial, sans-serif;
   background-color: #f5f5f5;
 }
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border: 0;
+}
