--- a/src/components/FlightBooking.module.css
+++ b/src/components/FlightBooking.module.css
@@ -5,51 +5,20 @@
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 
+.flightBooking h2 {
+  margin-bottom: 16px;
+}
+
 .passengerLabel {
   display: flex;
   align-items: center;
-}
-
-.helpIconWrapper {
-  position: relative;
-  margin-left: 5px;
-  cursor: pointer;
-}
-
-.helpIcon {
-  width: 16px;
-  height: 16px;
-}
-
-.tooltip {
-  position: absolute;
-  bottom: 100%;
-  left: 50%;
-  transform: translateX(-50%);
-  background-color: #333;
-  color: white;
-  padding: 5px 10px;
-  border-radius: 4px;
-  font-size: 12px;
-  white-space: nowrap;
-  z-index: 1;
-}
-
-.tooltip::after {
-  content: '';
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  border-width: 5px;
-  border-style: solid;
-  border-color: #333 transparent transparent transparent;
 }
 
 .passengerCount {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  margin-bottom: 15px;
+  margin-bottom: 16px;
 }
 
 .passengerCount span {
@@ -67,7 +36,6 @@
   border-radius: 16px;
   border: 1px solid #c0c0c0;
   background-color: #fff;
-  font-size: 18px;
   cursor: pointer;
   display: flex;
   justify-content: center;
@@ -92,4 +60,17 @@
   border: none;
   border-radius: 4px;
   cursor: pointer;
+}
+
+.visuallyHidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
