--- a/src/components/TravelSection.module.css
+++ b/src/components/TravelSection.module.css
@@ -41,7 +41,7 @@
   right: 0;
   bottom: 0;
   background: linear-gradient(180deg, rgba(255, 255, 255, 0.9) 26%, rgba(255, 255, 255, 0) 100%);
-  padding: 24px 16px;
+  padding: 24px 25px;
 }
 
 .cardTitle {
@@ -77,12 +77,14 @@
   left: 0;
   border-radius: 0 40px 40px 0;
   padding-left: 15px;
+  width: 40px;
 }
 
 .navButtonNext {
   right: 0;
   border-radius: 40px 0 0 40px;
   padding-right: 15px;
+  width: 40px;
 }
 
 .navButtonIcon {
